# SEP

./: .gitignore  08_07_2018.odp  170718_Vorstellung.pptx  Anforderungen.docx  Dokumentation.docx  Einteilung.docx  Flash_bearbeiten_usecase.odt  Flash_hinzufügen_Usecase.odt  Flashs_verschalten_Usecase.odt  Gruppe 7.pptx  Gruppe 7_2606.pptx  Prozess_simulieren_Usecase.odt  README.md  Sequenzdiagramm1  TODO  Untitled Diagram.xml
!Alt/Uebungsaufgabe7/: Gruppe 7_neu.pptx
!Alt/code/lin_sys_generic/: lin_sys.h  lin_sys_generic_static.cpp
!Alt/code/montecarlo/: m - Kopie.txt  montecarlo_nonlin.h
!Alt/code/nonlin_sys/: diffusion.h  lotka_volterra.h
!Alt/code/ode/: ode.cpp  ode.h
12.06.2018/: text_folien
Project/FlaKas/: FlaKas.pro  FlaKas.sln  FlaKas.vcxproj  FlaKas.vcxproj.filters  MainWindow.cpp  MainWindow.h  MainWindow.ui  TestEso.h  WorldMachine.cpp  WorldMachine.h  cascade.cpp  cascade.h  cascadeeso.h  cascadesolver.h  dataWindow.qml  eso.qrc  feed.qml  flash.cpp  flash.h  flash.qml  lin_sys.h  main.cpp  main.qml  module.h  nonlin_sys.h  qml.qrc  testclass.cpp  testclass.h  worldmachine.cpp.autosave
Project/FlaKas/GeneratedFiles/: qrc_qml.cpp
Project/FlaKas/html/: _world_machine_8cpp.html  _world_machine_8cpp__incl.map  _world_machine_8cpp__incl.md5  _world_machine_8h.html  _world_machine_8h__dep__incl.map  _world_machine_8h__dep__incl.md5  _world_machine_8h__incl.map  _world_machine_8h__incl.md5  _world_machine_8h_source.html  annotated.html  cascade_8cpp.html  cascade_8cpp__incl.map  cascade_8cpp__incl.md5  cascade_8h.html  cascade_8h__dep__incl.map  cascade_8h__dep__incl.md5  cascade_8h__incl.map  cascade_8h__incl.md5  cascade_8h_source.html  class_c_a_s_c_a_d_e_e_s_o-members.html  class_c_a_s_c_a_d_e_e_s_o.html  class_c_a_s_c_a_d_e_e_s_o_a87ddbb1f74cbb26db6dafa7d780ed7e9_icgraph.map  class_c_a_s_c_a_d_e_e_s_o_a87ddbb1f74cbb26db6dafa7d780ed7e9_icgraph.md5  class_flash-members.html  class_flash.html  class_flash__coll__graph.map  class_flash__coll__graph.md5  class_flash__inherit__graph.map  class_flash__inherit__graph.md5  class_flash_a074095aaca2230d0bc8d9e5cc513086c_icgraph.map  class_flash_a074095aaca2230d0bc8d9e5cc513086c_icgraph.md5  class_flash_a14aa681b115b9ca955ab775ff5e674e0_icgraph.map  class_flash_a14aa681b115b9ca955ab775ff5e674e0_icgraph.md5  class_flash_a1c6d0596f0a6dbdd7b391ab85772b2d4_icgraph.map  class_flash_a1c6d0596f0a6dbdd7b391ab85772b2d4_icgraph.md5  class_flash_a289586a8a31a503bd4f96ea9455f235e_icgraph.map  class_flash_a289586a8a31a503bd4f96ea9455f235e_icgraph.md5  class_flash_a2af985b9562aa54cbc5c3dfd2f4292ef_icgraph.map  class_flash_a2af985b9562aa54cbc5c3dfd2f4292ef_icgraph.md5  class_flash_a5ae7d29d13281fafa84cc9c247461fda_icgraph.map  (+270 more)
Project/FlaKas/latex/: _world_machine_8cpp.tex  _world_machine_8cpp__incl.md5  _world_machine_8h.tex  _world_machine_8h__dep__incl.md5  _world_machine_8h__incl.md5  annotated.tex  cascade_8cpp.tex  cascade_8cpp__incl.md5  cascade_8h.tex  cascade_8h__dep__incl.md5  cascade_8h__incl.md5  class_c_a_s_c_a_d_e_e_s_o.tex  class_c_a_s_c_a_d_e_e_s_o_a87ddbb1f74cbb26db6dafa7d780ed7e9_icgraph.md5  class_flash.tex  class_flash__coll__graph.md5  class_flash__inherit__graph.md5  class_flash_a074095aaca2230d0bc8d9e5cc513086c_icgraph.md5  class_flash_a14aa681b115b9ca955ab775ff5e674e0_icgraph.md5  (+133 more)
Project/FlaKas/src/BlockDeco/doc/: CMakeLists.txt  documentation-config.doxygen.in
Project/FlaKas/src/DcoCppCe/: CMakeLists.txt
Project/FlaKas/src/DcoCppCe/examples/gt1s/: CMakeLists.txt  driver.cpp  f.hpp
Project/FlaKas/src/DcoCppCe/include/dco/: global_includes.hpp  operations.hpp  timer.hpp  ts_data.hpp
Project/FlaKas/src/Eso/: CMakeLists.txt
Project/FlaKas/src/Eso/include/Eso/: AlgebraicEsoView.hpp  Dco1Model.hpp  FirstOrderEso.hpp
Project/FlaKas/src/Yasp/: CMakeLists.txt
Project/Solver/src/: CMakeLists.txt
Project/Solver/src/BlockDeco/: CMakeLists.txt
Project/Solver/src/BlockDeco/doc/: technical-overview.dox  user-guide.dox  welcome.dox
Project/Solver/src/BlockDeco/include/BlockDeco/: AlgebraicEsoBlockSolver.hpp  Block.hpp
Project/Solver/src/BlockDeco/test/: AlgebraicEsoBlockSolver.test.cpp  AlgebraicEsoSolver.test.cpp  BlockDeco.test.cpp  CMakeLists.txt
Project/Solver/src/BlockDecoBTF/: CMakeLists.txt  btf_maxtrans.c  btf_strongcomp.c
Project/Solver/src/BlockDecoBTF/include/BlockDecoBTF/: btf.h
Project/Solver/src/DcoCppCe/examples/gt1s/: CMakeSettings.json  Makefile  driver.hpp  main.cpp
Project/Solver/src/DcoCppCe/include/dco/: access.hpp  basetype.hpp  basetype_decl.hpp  dco.hpp  types.hpp
Project/Solver/src/Eigen3/: CMakeLists.txt
Project/Solver/src/Eigen3/eigen3/: .hg_archival.txt
Project/Solver/src/Eigen3/eigen3/Eigen/src/SparseLU/: SparseLU.h  SparseLU_SupernodalMatrix.h
Project/Solver/src/Eso/include/Eso/: AlgebraicEsoView.hpp  EqGroup.hpp
Project/Solver/src/Eso/include/Eso/Models/: MoreModel.hpp  SepCes.hpp  SimpleModel.hpp  VanDerPolModel.hpp  VanDerPolTask.hpp  VanDerPolTaskEso.hpp
Project/Solver/src/Eso/test/: CMakeLists.txt  FirstOrderEso.test.cpp
Project/Solver/src/GTest/: CMakeLists.txt
Project/Solver/src/SingleFlash/: CMakeLists.txt  main.cpp
Project/Solver/src/Yasp/include/Yasp/: Yasp.hpp
Project/Solver/src/Yasp/src/: Yasp.cpp
Project/build-FlaKas-Desktop_Qt_5_11_0_MinGW_32bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h  ui_worldmachine.h
Project/build-FlaKas-Desktop_Qt_5_11_0_MinGW_32bit-Release/: Makefile  Makefile.Debug  Makefile.Release
Uebungsaufgabe7/: Begriffsmodell  Gruppe 7.pptx  class_diagram.html
Uebungsaufgabe7/12.06.2018/: 050618.odp
Uebungsaufgabe7/code/ode/: Makefile  (+3 more)
code/lin_sys/: Makefile  lin_sys.h  lin_sys_fd.cpp  lin_sys_symbolic_adjoint.cpp
code/lin_sys_dco/: Makefile
code/lin_sys_generic/: lin_sys.h
code/montecarlo/: Makefile  data.txt  dataset.h  m.txt  montecarlo.cpp  montecarlo.cpp.autosave  montecarlo.h  montecarlo_linsys.h  montecarlo_nonlin.h  montecarlo_ode.cpp  montecarlo_ode.h
code/nonlin_sys/: Makefile  nonlin_sys.cpp  nonlin_sys.h  nonlin_sys_dco.cpp
code/ode/: Makefile
(+105 files in other folders)
